<resources>
    <string name="smpl_contacts">Edit</string>
    <string name="app_name">Address</string>
    <string name="show">Show</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="list">list</string>
    <string name="edit">edit</string>

</resources>
