<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img"
        android:layout_width="208dp"
        android:layout_height="121dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/singer" />

    <LinearLayout
        android:layout_width="401dp"
        android:layout_height="121dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:textColor="#ff5805"
        android:textSize="40dp"
        android:textStyle="bold">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="43dp"

            android:text="@string/phone" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/email" />
    </LinearLayout>

</LinearLayout>
